<resources>
    <string name="app_name">知心</string>
    <string name="action_settings">Settings</string>
    <string name="logoImageDescription">知心图标</string>
    <string name="null_value">0</string>
    <string name="KEY_IS_DB_CREATED">KEY_IS_DB_CREATED</string>
    <string name="login_phone_edittext_hints">请输入手机号</string>
    <string name="login_password_input_hints">请输入密码</string>
    <string name="login_password_edittext_hints">请输入密码（至少8位数字或字母）</string>
    <string name="regist_validate_hint">请输入验证码</string>
    <string name="regist_password_tips">请输入密码至少包含8位，包含数字和字母</string>
    <string name="regist_password_again">请确认密码</string>
    <string name="modify_nickname">请输入昵称</string>
    <string name="modify_signature">个性签名</string>
    <string name="regist_invite_hint">天王盖地虎，暗号说清楚！</string>
    <string name="more_suggestion_hint">用得不爽了，请一定告诉我们！我们才能做得更好~</string>
    <string name="more_suggestion_contact">手机号码/Email地址</string>
    <string name="more_company_hint">如有业务或商务合作意向，可在此简要描述，并在下方填写联系信息，我们将在最短时间内与您联系。感谢支持！</string>
    <string name="more_reset_input_old_hint">请输入原密码</string>
    <string name="more_reset_input_new_hint">请输入新密码（至少8位数字或字母）</string>
    <string name="more_reset_confirm_new_hint">请确认新密码</string>
    <string name="wenda_answer_hints">亲，请点击填写哦</string>
    <string name="more_user_info_email_hint">请输入电子邮箱</string>
    <string name="more_user_info_name_hint">请输入真实姓名</string>
    <string name="more_user_info_identity_hint">请输入身份证号</string>
    <string name="more_user_info_age_hint">请输入年龄</string>
    <string name="user_info_address_add_name_hint">请填写收货人姓名</string>
    <string name="user_info_address_add_phone_hint">请填写收货人手机号码</string>
    <string name="user_info_address_add_code_hint">请填写所在地区邮编</string>
    <string name="user_info_address_add_detail_hint">请填写收货详细地址</string>
    <string name="user_info_address_add_area_hint">请选择所在地区</string>
    <string name="cash_account_please_input_hint">请输入</string>
    <string name="cash_account_please_input_amount_hint">请输入提现金额</string>
    <string name="cash_account_please_input_token_hint">请输入短信验证码</string>
    <string name="cash_account_please_input_alipay_hint">必须本人的支付宝</string>
    <string name="cash_account_please_chose_bank_hint">点击选择</string>
    <string name="user_friend_input_search_key">请输入朋友昵称/手机号码</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="regist_input_your_phone">请输入注册手机号:</string>
    <string name="regist_input_your_validate_code">请输入收到的短信验证码号:</string>
    <string name="regist_input_your_invite_code">请输入好友接头暗号:</string>
    <string name="regist_input_your_password">请设置密码:</string>
    <string name="regist_aggrement">我已经阅读并同意 使用条款</string>
    <string name="confirm">确认</string>
    <string name="regist_invite_code">请输入邀请码</string>
    <string name="regist_validate_code">请输入收到的短信验证码:</string>
    <string name="regist_validate_next">下一步</string>
    <string name="regist_resend_validate_code">重新发送验证码</string>
    <string name="regist_validate_code_tips">注：如长时间未收到，请联系我们微信账号“趣宝盆”，有专人为您解决！</string>
    <string name="regist_please_set_password">请设置密码:</string>
    <string name="duijiang_duijiang">兑奖</string>
    <string name="duijiang_choujiang">抽奖</string>
    <string name="duijiang_coin">金币</string>
    <string name="duijiang_credit">积分</string>
    <string name="duijiang_duijinag_btn">立即兑奖</string>
    <string name="duijiang_choujiang_btn">立即抽奖</string>
    <string name="duijiang_choose_other_address">选择其他收货地址</string>
    <string name="quduijiang_introduce">活动介绍</string>
    <string name="more_share_with_friends">推荐给朋友</string>
    <string name="more_suggestion">意见反馈</string>
    <string name="more_scores">亲，给我们打个分呗~</string>
    <string name="more_update">版本更新</string>
    <string name="more_about_us">关于我们</string>
    <string name="more_i_am_enterprise">我是企业</string>
    <string name="more_modify_password">修改密码</string>
    <string name="more_option">通用设置</string>
    <string name="more_logout">退出当前账号</string>
    <string name="qushejiao_coin_text">金币</string>
    <string name="qushejiao_fame_text">身价</string>
    <string name="qushejiao_fame_symble">￥</string>
    <string name="qushejiao_qiandao">签到赢积分</string>
    <string name="qushejiao_qiandao_already">已签到</string>
    <string name="qushejiao_message">消息</string>
    <string name="qushejiao_credit_avaliable">可用积分</string>
    <string name="qushejiao_level">等级</string>
    <string name="qushejiao_level_info">等级详情</string>
    <string name="qushejiao_rank">排行榜</string>
    <string name="qushejiao_qufriend">趣好友</string>
    <string name="qushejiao_qubaobao">趣宝宝</string>
    <string name="qushejiao_baobaomarket">宝宝市场</string>
    <string name="rank_all">总榜</string>
    <string name="rank_month">月榜</string>
    <string name="rank_week">周榜</string>
    <string name="dialog_pick_image_camera">相机</string>
    <string name="dialog_pick_image_gallery">相册</string>
    <string name="cancel">取消</string>
    <string name="level_upgrade_level_title">升级方法 : </string>
    <string name="level_upgrade_level_description">会员依靠经验值的积累可获得等级的晋升</string>
    <string name="level_my_level_text">我的等级</string>
    <string name="level_my_level_tips">等级 : </string>
    <string name="level_my_level_tips2">等级:</string>
    <string name="level_my_current_experience">当前经验值:</string>
    <string name="level_new_activity">最新活动</string>
    <string name="zhanneixin_button_xitong">系统</string>
    <string name="zhanneixin_button_zhongjiang">中奖</string>
    <string name="zhanneixin_button_sixin">私信</string>
    <string name="zhanneixin_button_qingqiu">请求</string>
    <string name="header_submit_text">提交</string>
    <string name="header_history_text">历史记录</string>
    <string name="header_my_huati">我的话题</string>
    <string name="header_back_home">返回首页</string>
    <string name="qubaobao_my_lord">我的萌主</string>
    <string name="qubaobao_my_baobao">我的宝宝</string>
    <string name="qubaobao_this_month_contribution">本月贡献:</string>
    <string name="qubaopen_add_friend">添加好友</string>
    <string name="qubaopen_rank">排名:</string>
    <string name="qushouye_quceshi">趣测试</string>
    <string name="qushouye_qudiaoyan">趣调研</string>
    <string name="qushouye_quhuati">趣话题</string>
    <string name="qushouye_lishiceshi">历史测试</string>
    <string name="qushouye_lishidiaoyan">历史调研</string>
    <string name="qushouye_gerenziliao">个人资料</string>
    <string name="qugonggao_gonggao">公告</string>
    <string name="qubaobao_change_turn_text">换一批</string>
    <string name="baobaomarket_buy">购买</string>
    <string name="quhuati_submit_answer">提交并查看答案</string>
    <string name="quhuati_share">分享赢积分:</string>
    <string name="quhuati_publish_single">单选题</string>
    <string name="quhuati_publish_multi">多选题</string>
    <string name="quhuati_publish_maxNumber">可投选项</string>
    <string name="quhuati_publish_titleHint">请输入投票主题</string>
    <string name="quhuati_publish_addChoice">增加选项</string>
    <string name="quhuati_publish_submit">提交</string>
    <string name="quhuati_myFinish">我参与的话题</string>
    <string name="quhuati_myPublish">我发布的话题</string>
    <string name="quceshi_question_preview">上一题</string>
    <string name="quceshi_question_next">下一题</string>
    <string name="quceshi_result">测试结果</string>
    <string name="quceshi_share">分享赢积分:</string>
    <string name="quceshi_hide_answer">隐藏答案</string>
    <string name="quceshi_public_answer">公开答案</string>
    <string name="quceshi_friend_answer">好友答案</string>
    <string name="share_yaoqingma">接头暗号:</string>
    <string name="header_skip_text">跳过</string>
    <string name="regist_invite_code_tips">注：如没有接头暗号，可直接跳过</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_birth">出生日期</string>
    <string name="user_info_id">身份认证</string>
    <string name="user_info_bloodtype">血型</string>
    <string name="user_info_area">所在地区</string>
    <string name="user_info_address">收货地址</string>
    <string name="user_info_email">电子邮箱</string>
    <string name="user_info_tips">以下资料将作为账号归属及领奖的唯一凭证，请认真填写</string>
    <string name="user_info_attention">注意:</string>
    <string name="user_info_authentication">身份认证将作为兑奖凭证,请认真填写,每个月仅能修改一次!</string>
    <string name="user_info_authentication_true">已验证</string>
    <string name="user_info_authentication_false">未验证</string>
    <string name="user_info_address_name">收货人</string>
    <string name="user_info_address_phone">手机号码</string>
    <string name="user_info_address_area">所在地区</string>
    <string name="user_info_address_code">邮政编码</string>
    <string name="user_info_address_detail">详细地址</string>
    <string name="user_info_address_modify_delete">删除收货地址</string>
    <string name="user_info_address_modify_default">设置成默认收货地址</string>
    <string name="dialog_pick_sex_male">男</string>
    <string name="dialog_pick_sex_female">女</string>
    <string name="dialog_pick_sex_null">无</string>
    <string name="dialog_pick_blood_type_A">A</string>
    <string name="dialog_pick_blood_type_B">B</string>
    <string name="dialog_pick_blood_type_O">O</string>
    <string name="dialog_pick_blood_type_AB">AB</string>
    <string name="dialog_pick_blood_type_Other">其他</string>
    <string name="my_huati">我的话题</string>
    <string name="confirm_duijiang">确认兑奖</string>
    <string name="confirm_lingjiang">立即领奖</string>
    <string name="address_manage">地址管理</string>
    <string name="send_token">获取验证码</string>
    <string name="resend_token">重新发送验证码</string>
    <string name="qu_huati_xuanxiang">选项</string>
    <string name="cash_get_alipay">支付宝提现</string>
    <string name="cash_get_bank">银行卡提现</string>
    <string name="cash_account_out">支出</string>
    <string name="cash_account_in">收入</string>
    <string name="cash_account_balance">账户余额:</string>
    <string name="cash_account_total_income">总收入:</string>
    <string name="cash_account_total_expend">已支出:</string>
    <string name="cash_account_amount">本次提现金币</string>
    <string name="cash_account_alipay_account">支付宝账号</string>
    <string name="cash_account_name">姓名</string>
    <string name="cash_account_id">身份证号码</string>
    <string name="cash_account_bank_account">借记卡卡号</string>
    <string name="cash_account_bank_account_name">持卡人姓名</string>
    <string name="cash_account_bank_account_id">持卡人身份证</string>
    <string name="cash_account_bank_account_type">选择银行</string>
    <string name="cash_account_token_phone">获取短信验证码的手机:</string>
    <string name="cash_account_get_token">获取短信验证码</string>
    <string name="cash_account_encash_tips">以下信息将作为提现的唯一依据,请认真填写.</string>
    <string name="cash_account_token_tips">无法收到验证码,请联系微信账号"趣宝盆"</string>
    <string name="user_message_system">系统</string>
    <string name="user_message_lottery">兑奖</string>
    <string name="user_message_private">私信</string>
    <string name="user_message_request">请求</string>
    <string name="user_message_accept">接受</string>
    <string name="user_message_accepted">已接受</string>
    <string name="user_message_refuse">拒绝</string>
    <string name="user_message_refused">已拒绝</string>
    <string name="user_message_remove">删除</string>
    <string name="user_friend_check_recommend">查看推荐好友</string>
    <string name="last_score">心理健康指数</string>
    <string name="character_complete">心理解析度</string>
    <string name="mood_control">情绪管理</string>
    <string name="character">性格</string>
    <string name="communication">交往</string>
    <string name="career">职导</string>
    <string name="health">健康</string>
    <string name="interest">兴趣测试</string>
    <string name="footer_zhiji">知己</string>
    <string name="footer_xinliditu">心理地图</string>
    <string name="footer_zhibi">知彼</string>
    <string name="footer_message">消息</string>
    <string name="footer_me">我</string>
    <string name="login_by_tencent">QQ账号登录</string>
    <string name="login_by_wx">微信账号登录</string>
    <string name="login_by_sina">微博账号登录</string>
    <string name="login_by_phone">知心账号登录</string>
    <string name="regist"><u>注册成为知心会员</u></string>
</resources>